--- a/style.css
+++ b/style.css
@@ -168,6 +168,11 @@ section p {
   
    text-align: left;
 }
+#home:hover{
+    transform: scale(1.03);
+    transition: transform 0.3s ease;
+
+}
 
 #contact address {
     background: #fff;
@@ -184,6 +189,41 @@ footer {
     color: #fff;
     padding: 20px;
     margin-top: 50px;
+}
+footer:hover{
+    text-decoration: underline;
+}
+
+.hidden {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: all 0.6s ease;
+}
+
+.show {
+    opacity: 1;
+    transform: translateY(0);
+    color: #333;
+    
+}
+
+
+.navbar a.active {
+    color: black;
+    font-weight: bold;
+}
+
+
+.navbar.sticky {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background: #fff;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    border-radius: 12px;
+   
 }
 
 
